make dialog register

--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -49,6 +49,8 @@
 .modal-default-button {
   border-radius: 5px;
   background-color: #635c53;
+  font-family: "PT_Sans-Web-bold";
+
   border: none;
   color: #eeeeee;
   width: 20%;
