--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -31,7 +31,14 @@
   text-align: left;
   color: #635c53;
 }
-
+.form-label {
+  z-index: 5;
+  position: fixed;
+  margin-top: -20px;
+}
+.form-wrapper {
+  margin-top: 30px;
+}
 .icon-wrapper {
   position: absolute;
   width: 30px;
