--- a/src/styles/thread.css
+++ b/src/styles/thread.css
@@ -1,50 +1,58 @@
-.threads {
-  display: flex;
+.thread-container {
+  max-width: 1170px;
+  padding: 0 10px;
+  margin: 0 auto;
 }
-
 .thread-wrapper {
   display: flex;
-  flex-wrap: wrap;
+}
+.thread-detail-wrapper {
   border-right-style: solid;
-  border-width: 2px;
+  border-width: 0.5px;
+  border-color: #dddddd;
+  width: 70%;
+  margin-left: 20px;
 }
 
 .title-wrapper {
   margin-top: 35px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 80%;
 }
 .thread-detail-title {
   font-family: "PT_Sans-Web-Bold";
-  font-size: 40px;
+  font-size: 35px;
   text-align: left;
 }
 .thread-detail-subtitle {
   margin-top: 20px;
-  font-size: 20px;
+  font-size: 15px;
   text-align: left;
   font-family: "PT_Sans-Web-Regular";
 }
 .top-title {
-  font-size: 30px;
+  font-size: 20px;
   font-family: "PT_Sans-Web-Bold";
 }
 
 .threads-top-wrapper {
+  margin: 30px 20px;
+
   text-align: left;
-  margin-top: 30px;
 }
+
 .threads-number {
+  font-size: 10px;
   background-color: #635c53;
   padding: 12px 12px;
   text-align: center;
   color: #eeeeee;
 }
+
 .threads-title {
+  font-size: 12px;
   margin-left: 10px;
   padding-top: 10px;
 }
+
 .threads-item {
   margin-top: 20px;
   display: flex;
