--- a/src/styles/thread.css
+++ b/src/styles/thread.css
@@ -11,7 +11,6 @@
   border-width: 0.5px;
   border-color: #dddddd;
   width: 70%;
-  margin-left: 20px;
 }
 
 .title-wrapper {
@@ -45,6 +44,7 @@
   padding: 12px 12px;
   text-align: center;
   color: #eeeeee;
+  border-radius: 5px;
 }
 
 .threads-title {
