--- a/src/styles/thread.css
+++ b/src/styles/thread.css
@@ -5,12 +5,12 @@
 }
 .thread-wrapper {
   display: flex;
+  margin-bottom: 50px;
 }
 .thread-detail-wrapper {
   border-right-style: solid;
   border-width: 0.5px;
   border-color: #dddddd;
-  width: 70%;
 }
 
 .title-wrapper {
