make response on success insert form

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -38,6 +38,10 @@
   border: 1px solid #ff5f2d;
   outline: none;
 }
+.success {
+  border: 1px solid #33b95a;
+  outline: none;
+}
 .error-message {
   font-family: "PT_Sans-Web-Regular";
   color: #ff5f2d;
